--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/express": "^1.4.14",
     "@sentry/node": "^9.15.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
