--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,13 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
+    "axois": "0.0.1-security",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
+    "next-themes": "^0.4.6",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -34,6 +37,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^7.5.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "zod": "^3.24.3"
