closing project - modify this in new pattern

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZGVjZW50LXF1YWdnYS02My5jbGVyay5hY2NvdW50cy5kZXYk
-VITE_BACKEND_URL=https://searchjob-zeta.vercel.app/api
+VITE_BACKEND_URL=http://localhost:5000/api
